# learning-near

./: README.md
my-first-contract/: Cargo.toml
my-first-contract/src/: lib.rs
scripts/: start_near.sh
